samples/_failures_safe/1761439786_e682c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c354a0c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9c354a0c.c:171:9: error: expected declaration or statement at end of input
  171 |         } else if (c == '"') {
      |         ^
./samples/SAFE/__tmp_9c354a0c.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c354a0c.c:171:9: error: expected declaration or statement at end of input
